fixed nav padding on mobile

--- a/style.css
+++ b/style.css
@@ -319,3 +319,8 @@ h4 {
     90%;
   }
 }
+@media screen and (max-width: 350px) {
+  #navigation a {
+    padding: 5px;
+  }
+}
